--- a/IntroFile.Rmd
+++ b/IntroFile.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-Few lines chged deliberatly. However, none has shown till now.   
+Few lines changed deliberatly. However, none has shown till now.  Some more are being changed, hopefully this time they will show up. 
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
