--- a/IntroFile.Rmd
+++ b/IntroFile.Rmd
@@ -13,6 +13,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Few lines changed deliberatly. However, none has shown till now.  Some more are being changed, hopefully this time they will show up. 
 
+After connecting to Github now it for looking if it updates smoothly or not.
+
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
